# dev_environment

./: Cargo.toml  README.md
python-starter/: Cargo.toml
python-starter/assets/: pyproject.toml
python-starter/src/: lib.rs
starter/: Cargo.toml
starter/src/: main.rs
