[package]
name = "python-starter"
version = "0.1.0"
authors = ["curekoshimizu <45332899+curekoshimizu@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.2.0"
is_executable = "1.0.1"
