[package]
name = "starter"
version = "0.1.0"
authors = ["curekoshimizu <45332899+curekoshimizu@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
python-starter = { path = "../python-starter" }
clap = "3.0.0-beta.2"
