[tool.poetry]
name = "__PROJECT_NAME__"
version = "0.1.0"
description = ""
authors = ["curekoshimizu <45332899+curekoshimizu@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "~3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^4.3.20"
mypy = "^0.812"
pytest = "^6.2.1"
ipdb = "^0.13.4"
pysen = "^0.9.1"
pysen-plugins = "^2021.5.6"
pysen-ls = "^0.1.1"

[tool.pysen]
version = "0.9"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 120
py_version = "py38"

[[tool.pysen.lint.mypy_targets]]
paths = ["."]

[tool.pysen.plugin.mypy_init_check]
  function = "pysen_plugins::mypy_init_check"
